[Roopa] Added: CSS For CRUD Operations

--- a/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/List.cshtml
+++ b/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/List.cshtml
@@ -3,8 +3,17 @@
 @{
     ViewData["Title"] = "List";
 }
+<div class="head" flex-direction:row;>
 
-<h1>List</h1>
+    <img src="~/Assets/logo.png" style="width:50px;height:47px" />
+
+    <span style="color: #82A70C">EMPLOYEE</span>
+    <span style="color: #42515F"> PAYROLL</span>
+</div>
+<div class="bodylist">
+    <h3>List</h3>
+</div>
+
 
 <p>
     <a asp-action="Create">Create New</a>
