--- a/EmployeePayRollMVC/EmployeePayRollMVC/Views/Shared/_Layout.cshtml
+++ b/EmployeePayRollMVC/EmployeePayRollMVC/Views/Shared/_Layout.cshtml
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 
-    <link href="~/css/Create.css" rel="stylesheet" />
-    <link href="~/css/Delete.css" rel="stylesheet" />
-    <link href="~/css/Details.css" rel="stylesheet" />
-    <link href="~/css/Edit.css" rel="stylesheet" />
-    <link href="~/css/List.css" rel="stylesheet" />
+
+    <link href="~/css/create1.css" rel="stylesheet" />
+    <link href="~/css/Edit1.css" rel="stylesheet" />
+
+    <link href="~/css/Delete1.css" rel="stylesheet" />
+    <link href="~/css/Details1.css" rel="stylesheet" />
+    <link href="~/css/List1.css" rel="stylesheet" />
+
 </head>
 <body>
     <header>
