--- a/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/Create.cshtml
+++ b/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/Create.cshtml
@@ -3,60 +3,77 @@
 @{
     ViewData["Title"] = "Create";
 }
-<div class="body">
-    <h1>Create</h1>
+<div class="head" flex-direction:row;>
 
-    <h4>EmployeeModel</h4>
-    <hr />
+    <img src="~/Assets/logo.png" style="width:50px;height:47px" />
+    
+        <span style="color: #82A70C">EMPLOYEE</span>
+        <span style="color: #42515F"> PAYROLL</span>
+   
+</div>
 
-
-
-    <div class="row">
+<div class="createbody">
+    <h3>Create New Employee</h3>
+  
+    <br />
+    <div class="row1">
         <div class="col-md-4">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
+                <div class="createform-group">
                     <label asp-for="Empid" class="control-label"></label>
                     <input asp-for="Empid" class="form-control" />
                     <span asp-validation-for="Empid" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="createform-group">
                     <label asp-for="Name" class="control-label"></label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="createform-group">
                     <label asp-for="Profile_Image" class="control-label"></label>
-                    <input asp-for="Profile_Image" class="form-control" />
+                    <div>
+                        @Html.RadioButtonFor(model => model.Profile_Image, "~/Assets/Male (1).png")
+                        <img class="Profile_image-1" src="~/Assets/Male (1).png" />
+                        @Html.RadioButtonFor(model => model.Profile_Image, "~/Assets/Female (2).png")
+                        <img class="Profile_image-1" src="~/Assets/Female (2).png" />
+                        @Html.RadioButtonFor(model => model.Profile_Image, "~/Assets/Male (2).png ")
+                        <img class="Profile_image-1" src="~/Assets/Male (2).png"  />
+                        @Html.RadioButtonFor(model => model.Profile_Image, "~/Assets/Female (4).png ")
+                        <img class="Profile_image-1" src="~/Assets/Female (4).png "/>
+
+                    </div>
+                    @*<input asp-for="Profile_Image" class="form-control" />*@
                     <span asp-validation-for="Profile_Image" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="createform-group">
                     <label asp-for="Gender" class="control-label"></label>
                     <input asp-for="Gender" class="form-control" />
                     <span asp-validation-for="Gender" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="createform-group">
                     <label asp-for="Department" class="control-label"></label>
                     <input asp-for="Department" class="form-control" />
                     <span asp-validation-for="Department" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="createform-group">
                     <label asp-for="Salary" class="control-label"></label>
                     <input asp-for="Salary" class="form-control" />
                     <span asp-validation-for="Salary" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="createform-group">
                     <label asp-for="Start_date" class="control-label"></label>
                     <input asp-for="Start_date" class="form-control" />
                     <span asp-validation-for="Start_date" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="createform-group">
                     <label asp-for="Notes" class="control-label"></label>
                     <input asp-for="Notes" class="form-control" />
                     <span asp-validation-for="Notes" class="text-danger"></span>
                 </div>
+                <br />
 
-                <div class="form-group">
+                <div class="createform-group">
                     <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             </form>
