--- a/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/Delete.cshtml
+++ b/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/Delete.cshtml
@@ -3,15 +3,23 @@
 @{
     ViewData["Title"] = "Delete";
 }
-<div class="bodydelete">
+<div class="head" flex-direction:row;>
 
-<h1>Delete</h1>
+    <img src="~/Assets/logo.png" style="width:50px;height:47px" />
 
-<h3>Are you sure you want to delete this?</h3>
+    <span style="color: #82A70C">EMPLOYEE</span>
+    <span style="color: #42515F"> PAYROLL</span>
+</div>
+<div class="deletebody">
+
+<h3>Delete</h3>
+
+<h4>Are you sure you want to delete this?</h4>
 <div>
-    <h4>EmployeeModel</h4>
-    <hr />
-    <div class="rowdelete">
+    <br />
+    
+    
+    <div class="row3">
 
     <dl class="row">
         <dt class = "col-sm-2">
