--- a/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/Details.cshtml
+++ b/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/Details.cshtml
@@ -3,14 +3,21 @@
 @{
     ViewData["Title"] = "Details";
 }
+<div class="head" flex-direction:row;>
+
+    <img src="~/Assets/logo.png" style="width:50px;height:47px" />
+
+    <span style="color: #82A70C">EMPLOYEE</span>
+    <span style="color: #42515F"> PAYROLL</span>
+</div>
 <div class="bodydetails">
 
-<h1>Details</h1>
+<h3>Details</h3>
 
 <div>
-    <h4>EmployeeModel</h4>
-    <hr />
-    <div class="rowdetails">
+   
+   <br />
+    <div class="row4">
 
         <dl class="row">
             <dt class="col-sm-2">
@@ -65,6 +72,7 @@
     </div>
 
 </div>
+    <br />
 <div>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Empid }) |
     <a asp-action="List">Back to List</a>
