--- a/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/Edit.cshtml
+++ b/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/Edit.cshtml
@@ -3,66 +3,88 @@
 @{
     ViewData["Title"] = "Edit";
 }
-<div class="bodyedit">
-    <h1>Edit</h1>
+<div class="head" flex-direction:row;>
 
-    <h4>EmployeeModel</h4>
-    <hr />
-    <div class="row">
+    <img src="~/Assets/logo.png" style="width:50px;height:47px" />
+
+    <span style="color: #82A70C">EMPLOYEE</span>
+    <span style="color: #42515F"> PAYROLL</span>
+
+
+
+</div>
+<div class="bodyedit">
+
+
+    <h3>Edit</h3>
+    <br />
+
+    <div class="row2">
         <div class="col-md-4">
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
+                <div class="editform-group">
                     <label asp-for="Empid" class="control-label"></label>
                     <input asp-for="Empid" class="form-control" />
                     <span asp-validation-for="Empid" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="editform-group">
                     <label asp-for="Name" class="control-label"></label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="editform-group">
                     <label asp-for="Profile_Image" class="control-label"></label>
-                    <input asp-for="Profile_Image" class="form-control" />
-                    <span asp-validation-for="Profile_Image" class="text-danger"></span>
+                    <div>
+                        @Html.RadioButtonFor(model => model.Profile_Image, "~/Assets/Male (1).png")
+                        <img class="Profile_image-1" src="~/Assets/Male (1).png" />
+                        @Html.RadioButtonFor(model => model.Profile_Image, "~/Assets/Female (2).png")
+                        <img class="Profile_image-1" src="~/Assets/Female (2).png" />
+                        @Html.RadioButtonFor(model => model.Profile_Image, "~/Assets/Male (2).png ")
+                        <img class="Profile_image-1" src="~/Assets/Male (2).png" />
+                        @Html.RadioButtonFor(model => model.Profile_Image, "~/Assets/Female (4).png ")
+                        <img class="Profile_image-1" src="~/Assets/Female (4).png " />
+
+                    </div>
                 </div>
-                <div class="form-group">
+                <div class="editform-group">
                     <label asp-for="Gender" class="control-label"></label>
                     <input asp-for="Gender" class="form-control" />
                     <span asp-validation-for="Gender" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="editform-group">
                     <label asp-for="Department" class="control-label"></label>
                     <input asp-for="Department" class="form-control" />
                     <span asp-validation-for="Department" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="editform-group">
                     <label asp-for="Salary" class="control-label"></label>
                     <input asp-for="Salary" class="form-control" />
                     <span asp-validation-for="Salary" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="editform-group">
                     <label asp-for="Start_date" class="control-label"></label>
                     <input asp-for="Start_date" class="form-control" />
                     <span asp-validation-for="Start_date" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="editform-group">
                     <label asp-for="Notes" class="control-label"></label>
                     <input asp-for="Notes" class="form-control" />
                     <span asp-validation-for="Notes" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <br />
+                <div class="editform-group">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
-
-    <div>
-        <a asp-action="List">Back to List</a>
-    </div>
+    <br />
 </div>
+<div>
+    <a asp-action="List">Back to List</a>
+</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
