[Roopa] Added: Profile Image in List Page

--- a/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/List.cshtml
+++ b/EmployeePayRollMVC/EmployeePayRollMVC/Views/Employee/List.cshtml
@@ -58,7 +58,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Profile_Image)
+                <img src="@Url.Content(item.Profile_Image)"/>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Gender)
